--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,21 @@ body, html {
   background-color: #f0f0f0;
 }
 
+@keyframes falling {
+  0% {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
 .poop {
   font-size: 30px;
   position: absolute;
+  animation-name: falling;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
